Added package type for g4dbpro as well as fixing some errors